public class Account {
    private int balance;

    public void setBalance(int balance){
        this.balance = balance;
    }

    public void updateBalance(int balance) {
       this.balance = balance;
    }

    public int getBalance(){
        return balance;
    }
}
