public class Pile {

    public Pile(int deckSize){

    }
}
