public class Stand {
    private int positionOnBoard;
    private static int bodNR;
    private boolean runOutOfTokens = false;
    public Boolean assignToken () {
        boolean assign = false;
        return assign = true;
    }
}
