public class Token{
    private int position;

    public void setPosition(int position){
        this.position = position;
    }

    public int getPosition() {
        return position;
    }
}
