@startuml
'https://plantuml.com/class-diagram

class "MonopolyJunior" as Game
class Die
class Board
class Field
class Pile
class Card
class Player
class Account
class Stand
class Token

Game --|> Die
Game --|> Pile
Game --|> Player
Game --|> Board
Board --|> Field
Player --|> Stand
Player --|> Account
Player --|> Token
Pile --|> Card

class Game {
    -numberOfPlayers
    -currentPlayer: Player
}

class Die {
    -faceValue: int
    -nrOfSides: int
    +rollDie(): void
    +getFaceValue(): int
}

class Board {
    -antalFielder
    +getField()
}

class Field {
    -fieldName: String
    -effectText: String
    -pris: int
    -ejer: player
    -position: int

    +toString(): String

}

class Card {

}

'opdaterBalanse() er lavet som boolean, for at kunne returnere hvis en Player går bankerot'
class Account {
    -balanse: int
    +opdaterBalanse(int): void
    +getBalanse(): int
}

class Pile {
    -antalCard: int
    -shuffle(): void
    +drawCard(): Card

}

class Player {
    -nr: int
}

class Token {
    -position
}

'assignToken er lavet som boolean return i tilfælde af at der ikke er flere tokens'
class Stand {
    -bodNr: static int
    -positionOnBoard: int
    +assignToken(): boolean
}





@enduml